# organize-file-cli

./: .gitignore  LLM_GUIDELINES.md  README.md  pyproject.toml  requirements.txt  setup.sh
samples/code/: script_2.py
samples/documents/: document_3.txt
samples/other/: unknown.xyz
src/file_organizer/: __init__.py  cli.py  config.json  config.py  organizer.py  ui.py
tests/: test_organizer.py
